--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="lg.png" class="card-img-top" alt="...">
+      <img src="Chamados.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Filhos do Mundo</h5>
         <hr>
